--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to uffizzi!</title>
+<title>Welcome to uffizzi! test release</title>
 <style>
     * {
         margin: 0;
